# OokCatalog

./: .gitignore  README.md  config_sample.py  pyproject.toml
babel/: babel.cfg
catalog/: __init__.py  catalog.py  db.py  init.sql
catalog/templates/: home.html  layout.html  search.html  table.html
documentation/: INSTALLATION.md
ookcatalog/: __init__.py  catalog.py  commands.py  db.py  init.sql
ookcatalog/templates/: home.html  layout.html  search.html  table.html
ookcatalog/translations/fr/LC_MESSAGES/: messages.po
